make my website say something :)

--- a/start/index.html
+++ b/start/index.html
@@ -9,12 +9,17 @@
   <body>
     <div id="page">
       <div id="header">
-        {% include logo.html %}
+        <div id="status" class="closed">
+  <img src="/images/closed.png" alt="Not currenty available for work" height="150" width="150"/>
+</div>
         <div id="logotype">
           <h1>Phillip Ridlen</h1>
         </div>
       </div>
-      {{ content }}
+      Hi, I'm currently employed as an interactive developer at <a
+href="http://balcomagency.com"> Balcom Agency</a>. I'm not currently available
+for work, but feel free to take a look at my <a
+href="https://github.com/downloads/philtr/resume/phillip.ridlen.resume.pdf">r&eacute;sum&eacute;</a>.
     </div>
   </body>
-</html>
+</html> 
