add footer links

--- a/index.html
+++ b/index.html
@@ -10,3 +10,13 @@ layout: master
    <a href="http://github.com/philtr">projects</a> or shoot me an <a
    href="mailto:phillip@ridlen.net">e-mail</a>.
 </div>
+
+<footer>
+  <ul>
+    <li><a href="http://notes.philtr.net">blog</a></li>
+    <li><a href="http://twitter.com/philtr">twitter</a></li>
+    <li><a href="http://github.com/philtr">github</a></li>
+    <li><a href="http://forrst.me/philtr">forrst</a></li>
+    <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
+  </ul>
+</footer>
