--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: master
 <div id="intro">
    Hi, I'm a Ruby web developer <span class="amp">&amp;</span> designer
    currently employed at <a href="http://balcomagency.com"> Balcom Agency</a>.
-   I'm not currently available for work, but feel free to take a look at my <a
-   href="http://plixels.net/resume">r&eacute;sum&eacute;</a>,
-   <a href="http://github.com/philtr">projects</a> or shoot me an <a
+   I'm not currently available for freelance work, but feel free to take a look
+   at my <a href="http://plixels.net/resume">r&eacute;sum&eacute;</a>, <a
+   href="http://github.com/philtr">projects</a> or shoot me an <a
    href="mailto:phillip@ridlen.net">e-mail</a>.
 </div>
 
