tweak layout & colors

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ layout: master
 </div>
 
 <footer>
+  copyright twenty-eleven phillip ridlen. //
   <ul>
     <li><a href="http://notes.philtr.net">blog</a></li>
     <li><a href="http://twitter.com/philtr">twitter</a></li>
