fix grammar on 404

--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
       </div>
       </div>
       <div id="intro">
-        Looks like you're barking up the wrong tree! Nothing to see here, go
-        back to the <a href="/">move along</a>.
+        Looks like you're barking up the wrong tree! These aren't the droids
+        you're looking for; <a href="/">move along</a>.
       </div>
 </div>
 
