--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ layout: master
    currently employed at <a href="http://balcomagency.com"> Balcom Agency</a>.
    I'm not currently available for freelance work, but feel free to take a look
    at my <a href="http://plixels.net/resume">r&eacute;sum&eacute;</a>, <a
-   href="http://github.com/philtr">projects</a> or shoot me an <a
+   href="http://github.com/philtr">projects</a>, read my <a href="http://blog.philtr.net">, or shoot me an <a
    href="mailto:phillip@ridlen.net">e-mail</a>.
 </div>
