add link to contact page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ layout: master
    I'm not currently available for freelance work, but feel free to take a look
    at my <a href="http://plixels.net/resume">r&eacute;sum&eacute;</a>, <a
    href="http://github.com/philtr">projects</a>, read my <a href="http://blog.philtr.net">blog</a>, or shoot me an <a
-   href="mailto:phillip@ridlen.net" title="Aw, I always liked the dash. R.I.P. e-mail :'(">email</a>.
+   href="/contact/" title="Aw, I always liked the dash. R.I.P. e-mail :'(">email</a>.
 </div>
