--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <ul>
-{% for post in posts %}
- <li>{{ post.title }}</li>
+{% for post in site.posts %}
+ <li><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
