--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ layout: default
   </article>
 {% endfor %}
 </section>
+<section id="paginator">
 {% if paginator.next_page %}<p class="older"><a href="/page{{ paginator.next_page }}">&laquo; Older Posts</a></p>{% endif %}
 {% if paginator.previous_page %}
   {% if paginator.previous_page == 1 %}
@@ -32,3 +33,4 @@ layout: default
     <p class="newer"><a href="/page{{ paginator.previous_page }}">Newer Posts &raquo;</p>
   {% endif %}
 {% endif %}
+</section>
