--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: master
 ---
 <div id="intro">
-   Hi, I'm a Ruby web developer <span class="amp">&amp;</span> designer
-   currently employed at <a href="http://balcomagency.com"> Balcom Agency</a> in
-   Fort Worth, Texas.. I'm not available for freelance work right now, but feel
+   Hi, I&rsquo;m a Ruby web developer <span class="amp">&amp;</span> designer
+   currently employed at <a href="http://balcomagency.com">Balcom Agency</a> in
+   Fort Worth, Texas. I&rsquo;m not available for freelance work right now, but feel
    free to take a look at my <a
    href="http://plixels.net/resume">r&eacute;sum&eacute;</a>, <a
    href="http://github.com/philtr">projects</a>, read my <a
