--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: master
    currently employed at <a href="http://balcomagency.com">Balcom Agency</a> in
    Fort Worth, Texas. I&rsquo;m not available for freelance work right now, but feel
    free to take a look at my <a
-   href="http://plixels.net/resume">r&eacute;sum&eacute;</a>, <a
+   href="http://plixels.net/resume">r&eacute;sum&eacute;</a> or <a
    href="http://github.com/philtr">projects</a>, read my <a
    href="http://blog.phillipridlen.com">blog</a>, or shoot me an <a
    href="/contact/" title="Aw, I always liked the dash. R.I.P. e-mail
