--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@ layout: master
 ---
 <div id="intro">
    Hi, I&rsquo;m a Ruby web developer <span class="amp">&amp;</span> designer
-   currently employed at <a href="http://balcomagency.com">Balcom Agency</a> in
-   Fort Worth, Texas. I&rsquo;m not available for freelance work right now, but feel
-   free to take a look at my <a
-   href="http://plixels.net/resume">r&eacute;sum&eacute;</a> or <a
-   href="http://github.com/philtr">projects</a>, read my <a
-   href="http://blog.phillipridlen.com">blog</a>, or shoot me an <a
-   href="/contact/" title="Aw, I always liked the dash. R.I.P. e-mail
-   :'(">email</a>.
+   currently employed at <a href="http://balcomagency.com" class="exit">Balcom Agency</a> in Fort Worth, Texas. 
+   I&rsquo;m not available for freelance work right now, but feel free to take a look at my 
+   <a href="http://phillipridlen.com/resume/phillip.thomas.ridlen.pdf" class="downloadpdf">r&eacute;sum&eacute;</a>
+   or <a href="http://github.com/philtr" class="exit">projects</a>, 
+   read my <a href="http://blog.phillipridlen.com" class="exit">blog</a>, or shoot me an 
+   <a href="/contact/">email</a>.
 </div>
