Update thanks message

--- a/thanks.html
+++ b/thanks.html
@@ -3,4 +3,4 @@ layout: master
 permalink: /contact/thanks/index.html
 ---
 
-<div id="intro">Thanks! I got your message, and I'll get back to you as soon as I can.</div>
+<div id="intro">Thanks! I got your message. I'll get back to you soon.</div>
