--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 layout: master
 ---
 <div id="intro">
-   Hi, I&rsquo;m a Ruby web developer <span class="amp">&amp;</span> designer
-   currently employed at <a href="http://balcomagency.com" class="exit">Balcom Agency</a> in Fort Worth, Texas. 
-   I&rsquo;m not available for freelance work right now, but feel free to take a look at my 
-   <a href="http://phillipridlen.com/resume/phillip.thomas.ridlen.pdf" class="downloadpdf">r&eacute;sum&eacute;</a>
-   or <a href="http://github.com/philtr" class="exit">projects</a>, 
-   read my <a href="http://blog.phillipridlen.com" class="exit">blog</a>, or shoot me an 
-   <a href="/contact/">email</a>.
+   Hi, I&rsquo;m a Ruby developer <span class="amp">&amp;</span> currently
+   employed at <a href="http://ovenbits.com">Oven Bits</a>
+   in Dallas, Texas. I&rsquo;m not available for freelance work right now, but
+   feel free to take a look at my
+   <a href="http://phillipridlen.com/resume/phillip.thomas.ridlen.pdf">r&eacute;sum&eacute;</a>
+   or <a href="http://github.com/philtr">projects</a>,
+   read my <a href="http://blog.phillipridlen.com">blog</a>,
+   or shoot me an <a href="/contact/">email</a>.
 </div>
