Update blog URL

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ layout: master
    I&rsquo;m not available for freelance work right now, but feel free to take
    a look at my <a href="http://phillipridlen.com/resume/phillip.thomas.ridlen.pdf">r&eacute;sum&eacute;</a>
    or <a href="http://github.com/philtr">projects</a>,
-   read my <a href="http://blog.phillipridlen.com">blog</a>,
+   read my <a href="http://phillipridlen.com/notes/">blog</a>,
    or shoot me an <a href="/contact/">email</a>.
 </div>
