--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
     {% case post.type %}
     {% when 'blog' %}
       <p>{{ post.content | strip_html | truncatewords: 100 }}
-      <a href="{{ post.url }}">Read more</a></p>
+      <a href="{{ site.baseurl }}{{ post.url }}">Read more</a></p>
     {% when 'music' %}
       <div class="album">
         <div class="cover">
