Clean up 404 page a bit

--- a/404.html
+++ b/404.html
@@ -8,16 +8,13 @@
   </head>
   <body>
     <header>
-      <div id="logo">
-  <img src="/images/logo.png" alt=""/>
-</div>
       <div id="logotype">
         <h1>Phillip Ridlen</h1>
       </div>
       </div>
       <div id="intro">
-        Looks like you're barking up the wrong tree! These aren't the droids
-        you're looking for; <a href="/">move along</a>.
+        Looks like you're barking up the wrong tree! Nothing to see here;
+        <a href="/">move along</a>.
       </div>
 </div>
 
