Go ahead and say it's 2013. No one will notice.

--- a/404.html
+++ b/404.html
@@ -16,18 +16,10 @@
         Looks like you're barking up the wrong tree! Nothing to see here;
         <a href="/">move along</a>.
       </div>
-</div>
-
-<footer>
-  copyright twenty-eleven phillip ridlen. //
-  <ul>
-    <li><a href="http://notes.philtr.net">blog</a></li>
-    <li><a href="http://twitter.com/philtr">twitter</a></li>
-    <li><a href="http://github.com/philtr">github</a></li>
-    <li><a href="http://forrst.me/philtr">forrst</a></li>
-    <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
-  </ul>
-</footer>
     </div>
+
+    <footer>
+      <p>Copyright &copy; 2013 Phillip Ridlen.</p>
+    </footer>
   </body>
 </html>
