Add modified intro from phillipridlen.com

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 ---
 layout: default
 ---
+
+<h2>Hi, I'm Phillip.</h2>
+<section id="intro">
+  I love constructing awesome software. I'm a Ruby developer currently
+ employed at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
+ I&rsquo;m not available for freelance work right now, but feel free to take
+ a look at my <a href="http://phillipridlen.com/resume/phillip.thomas.ridlen.pdf">r&eacute;sum&eacute;</a>
+ or <a href="http://github.com/philtr">projects</a>,
+ read a blog post or two below,
+ or shoot me an <a href="/contact/">email</a>.
+</section>
+
+<h3>Blog Posts</h3>
 <section id="posts">
   <dl class="posts">
     {% for post in site.posts %}
