--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 <h3>Blog Posts</h3>
 <section id="posts">
   <dl class="posts">
-    {% for post in site.posts %}
+    {% for post in site.categories.notes %}
       <dt>{{ post.date | date: '%b %d %Y' }}</dt>
       <dd><a href="{{ site.base-url }}{{ post.url }}">{{ post.title }}</a></dd>
     {% endfor %}
