Fix resume link (not that anyone cares)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: "Hi, I&rsquo;m Phillip"
   I love constructing awesome software. I'm a Ruby developer currently
  employed at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
  I&rsquo;m not available for freelance work right now, but feel free to take
- a look at my <a href="http://phillipridlen.com/resume/phillip.thomas.ridlen.pdf">r&eacute;sum&eacute;</a>
+ a look at my <a href="http://philtr.github.io/resume/phillip.thomas.ridlen.pdf">r&eacute;sum&eacute;</a>
  or <a href="http://philtr.github.io">projects</a>,
  read a blog post or two below,
  or shoot me an <a href="/contact/">email</a>.
