--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@ title: "Hi, I&rsquo;m Phillip"
 <h2>Hi, I'm Phillip.</h2>
 <section id="intro">
   I love constructing awesome software. I'm a Ruby developer currently
- employed at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
- I&rsquo;m not available for freelance work right now, but feel free to take
- a look at my <a href="http://philtr.github.io/resume/phillip.ridlen.pdf">r&eacute;sum&eacute;</a>
- or <a href="http://philtr.github.io">projects</a>,
- read a blog post or two below,
- or shoot me an <a href="/contact/">email</a>.
+  employed at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
+  I&rsquo;m not available for freelance work right now, but feel free to take
+  a look at my <a href="http://philtr.github.io">projects</a>, read a blog
+  post or two below, or shoot me an <a href="/contact/">email</a>.
 </section>
 
 <h3>Blog Posts</h3>
