--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: "Hi, I&rsquo;m Phillip"
 ---
 
-<h2>Hi, I'm Phillip.</h2>
+<h2>Hi, I&rsquo;m Phillip.</h2>
 <section id="intro">
-  I love constructing awesome software. I'm a Ruby developer currently
+  I love constructing awesome software. I&rsquo;m a Ruby developer currently
   employed at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
   I&rsquo;m not available for freelance work right now, but feel free to take
   a look at my <a href="http://philtr.github.io">projects</a> or shoot me an
