Dumb down blog posts pages

--- a/notes/index.html
+++ b/notes/index.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: notes
 ---
 
-<h3>Blog Posts</h3>
+<h3>Writings and Notes</h3>
 <section id="posts">
   <dl class="posts">
     {% for post in site.categories.notes %}
