Remove words that may imply I'm unhappy at my job
(Because I'm not.)

You should work at Oven Bits, too. <http://ovenbits.com/jobs>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: "Hi, I&rsquo;m Phillip"
 
 <h2>Hi, I&rsquo;m Phillip.</h2>
 <section id="intro">
-  I love constructing awesome software. I&rsquo;m a Ruby developer currently
-  employed at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
-  I&rsquo;m not available for freelance work right now, but feel free to take
+  I love constructing awesome software. I&rsquo;m a Ruby developer 
+  at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
+  I&rsquo;m not available for freelance work, but feel free to take
   a look at my <a href="http://philtr.github.io">projects</a> or shoot me an
   <a href="/contact/">email</a>.
 </section>
