WIP new design and stuff

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 ---
-layout: default
+layout: plank
 title: "Hi, I&rsquo;m Phillip"
+style: fancy
 ---
 
 <h2>Hi, I&rsquo;m Phillip.</h2>
-<section id="intro">
-  I love constructing awesome software. I&rsquo;m a Ruby developer 
-  at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
-  I&rsquo;m not available for freelance work, but feel free to take
-  a look at my <a href="http://philtr.github.io">projects</a> or shoot me an
-  <a href="/contact/">email</a>.
-</section>
+
+I love constructing awesome software. I&rsquo;m a Ruby developer 
+at <a href="http://ovenbits.com">Oven Bits</a> in Dallas, Texas.
+I&rsquo;m not available for freelance work, but feel free to take
+a look at my <a href="http://philtr.github.io">projects</a> or shoot me an
+<a href="/contact/">email</a>.
+</div>
 
