--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-{% for post in paginator.posts %}
-  {% assign the_post = post %}
+{% for page in paginator.posts %}
   {% include post.html %}
 {% endfor %}
 
