--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "Thoughts on web development life in general by Phillip Ridlen, a Ruby developer in Dallas, Texas."
+description: "Thoughts on web development and life in general by Phillip Ridlen, a Ruby developer in Dallas, Texas."
 ---
 
 {% for page in paginator.posts %}
