Add shy hyphens to intro paragraphs

--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <div class="intro">
   <p>
-    I like to build stuff and give it away. Most of these are released under an MIT license (check
-    each project for specifics) so you can do what you want with them.
+    I like to build stuff and give it away. Most of these are re&shy;leased under an MIT license
+    (check each pro&shy;ject for speci&shy;fics) so you can do what you want with them.
   </p>
 </div>
 
