Add nice underlines

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: "Thoughts on web development and life in general by Phillip Ridlen,
 {% endfor %}
 
 <nav>
-  <ul class="pager">
+  <ul class="pager nav">
     {% if paginator.next_page %}
       <li class="previous"><a href="{{ paginator.next_page_path }}"><span aria-hidden="true">&larr;</span> Older</a></li>
     {% endif %}
