--- a/projects.html
+++ b/projects.html
@@ -1,26 +1,19 @@
 ---
 layout: master
 ---
-<div class="container container-wide">
-  <div class="intro">
-    <p>
-      I like to build stuff and give it away. Most of these are re&shy;leased under an MIT license
-      (check each pro&shy;ject for speci&shy;fics) so you can do what you want with them.
-    </p>
-  </div>
+<section class="projects">
+  <p class="projects-intro">
+    I like to build stuff and give it away. Most of these are re&shy;leased under an MIT license
+    (check each pro&shy;ject for speci&shy;fics) so you can do what you want with them.
+  </p>
 
   {% for project in site.projects %}
-    {% capture col %}{% cycle "one", "two", "three" %}{% endcapture %}
-    {% if col == "one" %}<div class="row">{% endif %}
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <a href="{{ project.link }}"><img src="{{ project.preview | asset_path }}" class="img-responsive"/></a>
-        </div>
-        <div class="caption">
-          <h5><a href="{{ project.link }}">{{ project.title }}</a></h5>
-          <p>{{ project.summary }}</p>
-        </div>
+    <div class="project">
+      <a href="{{ project.link }}"><img src="{{ project.preview | asset_path }}"/></a>
+      <div>
+        <h5><a href="{{ project.link }}">{{ project.title }}</a></h5>
+        <p>{{ project.summary }}</p>
       </div>
-    {% if col == "three" %}</div>{% endif %}
+    </div>
   {% endfor %}
-</div>
+</section>
