--- a/notes/index.html
+++ b/notes/index.html
@@ -3,22 +3,15 @@ layout: default
 description: "Thoughts on web development and life in general by Phillip Ridlen, a Ruby developer in Dallas, Texas."
 ---
 
-<section class="posts">
-  {% for page in paginator.posts %}
-    {% include post.html %}
+<section class="posts markdown">
+  <h1>Notes</h1>
+  <ul>
+  {% for post in site.posts %}
+  <li>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    <small>{{ post.date | date: "%B %d, %Y" }}</small>
+  </li>
   {% endfor %}
-
-  <nav>
-    <ul class="pager nav">
-      {% if paginator.next_page %}
-        <li class="previous"><a href="{{ paginator.next_page_path }}"><span aria-hidden="true">&larr;</span> Older Posts</a></li>
-      {% endif %}
-
-      {% if paginator.previous_page %}
-        <li class="next"><a href="{{ paginator.previous_page_path }}">Newer Posts <span aria-hidden="true">&rarr;</span></a></li>
-      {% endif %}
-    </ul>
-  </nav>
 </section>
 
 
