--- a/notes/index.html
+++ b/notes/index.html
@@ -8,13 +8,14 @@ description: "Thoughts on web development and life in general by Phillip Ridlen,
     <h1>Notes</h1>
   </div>
 
-  <ul>
+  <ul class="posts-list">
   {% for post in site.posts %}
-  <li>
-    <small>{{ post.date | date: "%B %d, %Y" }}</small>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
+    <li>
+      <small>{{ post.date | date: "%B %d, %Y" }}</small>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
   {% endfor %}
+  </ul>
 </section>
 
 
