--- a/notes/index.html
+++ b/notes/index.html
@@ -1,21 +1,29 @@
 ---
 layout: default
 description: "Thoughts on web development and life in general by Phillip Ridlen, a Ruby developer in Dallas, Texas."
+styles:
+  - posts-list
 ---
 
-<section class="posts">
-  <div class="markdown">
-    <h1>Notes</h1>
-  </div>
+<h1>Notes</h1>
 
-  <ul class="posts-list">
+<section class="posts">
   {% for post in site.posts %}
-    <li>
-      <small>{{ post.date | date: "%B %d, %Y" }}</small>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
+    {% assign current_year = post.date | date: "%Y" %}
+    {% if current_year != previous_year %}
+      <h3 id="{{ current_year }}" class="header-link">
+        <a href="#{{ current_year }}">{{ current_year }}</a>
+      </h3>
+      {% assign previous_year = current_year %}
+    {% endif %}
+    <ul class="posts-list">
+      <li>
+        <small>{{ post.date | date: "%b %-d" }}</small>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+        <aside>{{ post.category }}</aside>
+      </li>
+    </ul>
   {% endfor %}
-  </ul>
 </section>
 
 
