--- a/notes/index.html
+++ b/notes/index.html
@@ -2,7 +2,7 @@
 layout: default
 description: "Thoughts on web development and life in general by Phillip Ridlen, a Ruby developer in Dallas, Texas."
 styles:
-  - posts-list
+  - posts/list
 ---
 
 <h1>Notes</h1>
@@ -11,19 +11,20 @@ styles:
   {% for post in site.posts %}
     {% assign current_year = post.date | date: "%Y" %}
     {% if current_year != previous_year %}
+      {% if previous_year %}</ul>{% endif %}
       <h3 id="{{ current_year }}" class="header-link">
         <a href="#{{ current_year }}">{{ current_year }}</a>
       </h3>
+      <ul class="posts-list">
       {% assign previous_year = current_year %}
     {% endif %}
-    <ul class="posts-list">
       <li>
         <small>{{ post.date | date: "%b %-d" }}</small>
         <a href="{{ post.url }}">{{ post.title }}</a>
         <aside>{{ post.category }}</aside>
       </li>
-    </ul>
   {% endfor %}
+  </ul>
 </section>
 
 
