--- a/notes/index.html
+++ b/notes/index.html
@@ -8,22 +8,16 @@ styles:
 <h1>Notes</h1>
 
 <section class="posts">
-  {% for post in site.posts %}
-    {% assign current_year = post.date | date: "%Y" %}
-    {% if current_year != previous_year %}
-      {% if previous_year %}</ul>{% endif %}
-      <h3 id="{{ current_year }}" class="header-link">
-        <a href="#{{ current_year }}">{{ current_year }}</a>
-      </h3>
-      <ul class="posts-list">
-      {% assign previous_year = current_year %}
-    {% endif %}
-      <li>
-        <small>{{ post.date | date: "%b %-d" }}</small>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        <aside>{{ post.category }}</aside>
-      </li>
+  {% for category in site.categories %}
+    <h3 id="{{ category[0] }}" class="header-link"><a href="#{{ category[0] }}">{{ category[0] }}</a></h3>
+    <ul class="posts-list">
+      {% for post in category[1] %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <aside>{{ post.date | date: "%Y" }}</aside>
+        </li>
+      {% endfor %}
+    </ul>
   {% endfor %}
-  </ul>
 </section>
 
