--- a/textarea_test.html
+++ b/textarea_test.html
@@ -6,8 +6,8 @@
     }
   }   
 
-  var el = document.getElementById('txtIn');
+  var el = document.getElementById('stupid');
   el.addEventListener('keypress', checkInput, false);
 </script>
 
-<textarea autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"/>
+<textarea id="stupid" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"/>
