--- a/textarea_test.html
+++ b/textarea_test.html
@@ -1,4 +1,4 @@
-<textarea id="stupid" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"/>
+<textarea id="stupid" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
 
 <script>
   function checkInput(e) {
